# SYNCRO

./: .npmrc  CONTRIBUTING.md  CurrentState.md  DEPENDENCY_UPDATE_POLICY.md  DEPENDENCY_VERSION_MANAGEMENT.md  DIRECTORY_OWNERSHIP_MATRIX.md  IMPLEMENTATION_SUMMARY.md  ISSUE_491_CONSOLIDATION_SUMMARY.md  ISSUE_491_VERIFICATION.md  ISSUE_493_COMPLETE.md  ISSUE_493_IMPLEMENTATION_SUMMARY.md  ISSUE_493_PR_GUIDE.md  ISSUE_494_COMPLETE.md  ISSUE_494_IMPLEMENTATION_SUMMARY.md  ISSUE_496_COMPLETE.md  ISSUE_496_IMPLEMENTATION_SUMMARY.md  ISSUE_497_IMPLEMENTATION_SUMMARY.md  ISSUE_497_PR_GUIDE.md  ISSUE_498_COMPLETE.md  ISSUE_498_IMPLEMENTATION_SUMMARY.md  ISSUE_498_PR_GUIDE.md  ISSUE_499_COMPLETE.md  ISSUE_499_IMPLEMENTATION_SUMMARY.md  KEY_ROTATION_FLOW.md  PULL_REQUEST_TEMPLATE.md  README.md  SECRET_HANDLING_AUDIT_REPORT.md  SECURITY_AUDIT_MATRIX_API_ROUTES.md  SUBSCRIPTIONS_PR_GUIDE.md  SUBSCRIPTIONS_PR_QUICK_REFERENCE.md  SUBSCRIPTIONS_REFACTORING_SUMMARY.md  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pr_body.txt
.github/: CODEOWNERS  IMPLEMENTATION_NOTES.txt  dependabot.yml
.husky/: pre-commit
backend/: .env.example  .eslintrc.cjs  .gitignore  OPS_DASHBOARD_README.md  README.md  TELEGRAM_INTEGRATION_GUIDE.md  index.js  jest.config.js  package-lock.json  package.json  test-csp-monitoring.js  tsconfig.json
client/: .eslintrc.cjs  .eslintrc.json  API_SECURITY_QUICK_REFERENCE.md  BACKEND_DOCUMENTATION.md  DASHBOARD_DATA_GUIDE.md  DEPENDENCY_UPDATE_POLICY.md  (+15 more)
contracts/contracts/virtual-card/: Cargo.toml
contracts/contracts/virtual-card/src/: lib.rs
(+416 files in other folders)
